--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -25,3 +25,18 @@
 #container a {
   text-decoration: none;
 }
+
+ion-slides {
+  margin-top: 50px;
+}
+
+ion-slide {
+  flex-direction: column;
+  font-size: small;
+  ion-text {
+    padding: 5px;
+  }
+  .selected {
+    font-weight: 600;
+  }
+}
