Upgraded to angular 10 and re-added android platform due to build error

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,8 +1,6 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>
-      Jonnyramen Photo Filter
-    </ion-title>
+    <ion-title> Photo Filter App </ion-title>
     <ion-buttons slot="end" *ngIf="image">
       <ion-button (click)="saveImage()">Save</ion-button>
     </ion-buttons>
